# interview

./: CMakeLists.txt  README.md  main.cpp  mystring.cpp  singleton.cpp
